TestSuite/errors/err0164.pas
type TBase = class
Test : integer;
end;

type TClass = class(TBase)
procedure Test;
begin
  inherited;
end;
end;
  
begin

end.